--- a/web/WEB-INF/template/Layout.xhtml
+++ b/web/WEB-INF/template/Layout.xhtml
@@ -71,12 +71,12 @@
                             </h:commandLink>
                         </li>
                         <li>
-                            <h:commandLink action="servico?faces-redirect=true">
+                            <h:link>
                                 <!--                            <h:link>-->
                                 <i class="fa fa-fw fa-wrench"></i>
                                 Serviços
                                 <!--                            </h:link>-->
-                            </h:commandLink>
+                            </h:link>
                         </li>
                         <li>
                             <h:link>
