--- a/web/WEB-INF/template/Layout.xhtml
+++ b/web/WEB-INF/template/Layout.xhtml
@@ -47,10 +47,10 @@
                             </h:link>
                         </li>
                         <li>
-                            <h:link>
+                            <h:commandLink action="agendamento?faces-redirect=true">
                                 <i class="fa fa-fw fa-calendar"></i>
                                 Agendamento
-                            </h:link>
+                            </h:commandLink>
                         </li>
                         <li>
                             <h:link>
@@ -71,11 +71,9 @@
                             </h:commandLink>
                         </li>
                         <li>
-                            <h:link>
-                                <!--                            <h:link>-->
+                            <h:link>                                
                                 <i class="fa fa-fw fa-wrench"></i>
-                                Serviços
-                                <!--                            </h:link>-->
+                                Serviços                                
                             </h:link>
                         </li>
                         <li>
