Cadastro de agenda ok

--- a/web/WEB-INF/template/Layout.xhtml
+++ b/web/WEB-INF/template/Layout.xhtml
@@ -53,6 +53,12 @@
                             </h:commandLink>
                         </li>
                         <li>
+                            <h:commandLink action="agendamento_wizard?faces-redirect=true">
+                                <i class="fa fa-fw fa-calendar"></i>
+                                AgendamentoWizard
+                            </h:commandLink>
+                        </li>
+                        <li>
                             <h:link>
                                 <i class="fa fa-fw fa-money"></i>
                                 Pagamentos
