--- a/web/WEB-INF/template/Layout.xhtml
+++ b/web/WEB-INF/template/Layout.xhtml
@@ -77,10 +77,10 @@
                             </h:commandLink>
                         </li>
                         <li>
-                            <h:link>                                
+                            <h:commandLink action="servico?faces-redirect=true">
                                 <i class="fa fa-fw fa-wrench"></i>
                                 Serviços                                
-                            </h:link>
+                            </h:commandLink>                     
                         </li>
                         <li>
                             <h:link>
