Limpeza de código e confirmação de alteração de status

--- a/web/WEB-INF/template/Layout.xhtml
+++ b/web/WEB-INF/template/Layout.xhtml
@@ -20,6 +20,8 @@
         <h:outputScript target="body" library="primefaces" name="jquery/jquery.js" />
         <h:outputScript target="body" library="javascript" name="layout.js" />
 
+        <link rel="shortcut icon" href="icon.ico" />
+        
     </h:head>
 
     <h:body>
